--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <span class="text-green">Cairo,Egypt</span>
         </div>
         <span class="text-grey">"Front-end Developer"</span>
-        <button class="btn"><a target="_blank" href="https://github.com/maryammagdy123">GitHub</a></button>
-        <button class="btn"><a target="_blank" href="https://www.behance.net/maryammagdy4">Behance</a></button>
-        <button class="btn"><a target="_blank" href="https://www.linkedin.com/in/mariam-magdy-1aa578216/">LinkedIn</a></button>
-        <button class="btn"><a target="_blank" href="https://www.frontendmentor.io/profile/maryammagdy123">Frontend mentor</a></button>
-        <button class="btn"><a target="_blank" download="Mariam-cv" href="Maryam-Magdy-Botros-Faraj--Resume-).pdf">Download CV</a></button>
+        <a class="btn" target="_blank" href="https://github.com/maryammagdy123">GitHub</a>
+        <a class="btn" target="_blank" href="https://www.behance.net/maryammagdy4">Behance</a>
+        <a class="btn" target="_blank" href="https://www.linkedin.com/in/mariam-magdy-1aa578216/">LinkedIn</a>
+        <a class="btn" target="_blank" href="https://www.frontendmentor.io/profile/maryammagdy123">Frontend mentor</a>
+        <a class="btn" target="_blank" download="Mariam-cv" href="Maryam-Magdy-Botros-Faraj--Resume-).pdf">Download CV</a>
     </section>
 
 </body>
